force-app/main/default/objects/Account/fields/Average_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Product_Price__c</fullName>
    <label>Average Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>