force-app/main/default/objects/Account/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Company Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>