force-app/main/default/objects/Account/fields/Previous_Month_Commission__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Month Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>